--- a/First.cbp
+++ b/First.cbp
@@ -41,13 +41,17 @@
 		<Unit filename="Headers/GraphicsDevice.h" />
 		<Unit filename="Headers/Sprite.h" />
 		<Unit filename="Headers/Test.h" />
-		<Unit filename="Headers/Vector2.h" />
+		<Unit filename="Headers/Text.h" />
+		<Unit filename="Headers/Utils.h" />
+		<Unit filename="Headers/Vertex2D.h" />
 		<Unit filename="Headers/Water.h" />
 		<Unit filename="Headers/Window.h" />
 		<Unit filename="Resources/GraphicsDevice.cpp" />
 		<Unit filename="Resources/Sprite.cpp" />
 		<Unit filename="Resources/Test.cpp" />
-		<Unit filename="Resources/Vector2.cpp" />
+		<Unit filename="Resources/Text.cpp" />
+		<Unit filename="Resources/Utils.cpp" />
+		<Unit filename="Resources/Vertex2D.cpp" />
 		<Unit filename="Resources/Water.cpp" />
 		<Unit filename="Resources/Window.cpp" />
 		<Unit filename="Source/main.cpp" />
